Pequeño cambio en home

--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
@@ -15,9 +15,10 @@
         <input type="radio" name="baseLayerRadioButton" value="OSMHumanitarian"> OSMHumanitarian<br>
         <input type="radio" name="baseLayerRadioButton" value="OSMCountries"> OSMCountries<br>
     </div>
+    <div class="text-center" id="info">&nbsp;</div>
 </div>
 
-<div id="info">&nbsp;</div>
+
 <script src="~/js/site.js"></script>
 <style>
     .card {
