--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
@@ -71,7 +71,7 @@
     var layerSource = new ol.source.ImageWMS({
         url: 'http://localhost:8080/geoserver/wms',
         params: {
-            'LAYERS': 'view_zona'
+            'LAYERS': 'view_peticion'
         },
         ratio: 1,
         serverType: 'geoserver',
