--- a/Net_Gis_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = "Perfil";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
@@ -12,11 +12,11 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name"></label>
+                <label asp-for="Name">Nombre</label>
                 <input asp-for="Name" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Surname"></label>
+                <label asp-for="Surname">Apellido</label>
                 <input asp-for="Surname" class="form-control" />
             </div>
             <div class="form-group">
@@ -24,11 +24,11 @@
                 <input asp-for="Email" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Gender"></label>
+                <label asp-for="Gender">Genero</label>
                 <input asp-for="Gender" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Language"></label>
+                <label asp-for="Language">Idioma</label>
                 <input asp-for="Language" class="form-control" />
             </div>
             @*<div class="form-group">
@@ -36,18 +36,18 @@
                 <input asp-for="Direction" class="form-control" />
             </div>*@
             <div class="form-group">
-                <label asp-for="Municipality"></label>
+                <label asp-for="Municipality">Municipio </label>
                 <input asp-for="Municipality" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="BirthDay"></label>
+                <label asp-for="BirthDay">Fecha de cumpleaños</label>
                 <input asp-for="BirthDay" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Role"></label>
+                <label asp-for="Role">Rol</label>
                 <input asp-for="Role" class="form-control" max="3" min="1"/>
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            <button id="update-profile-button" type="submit" class="btn btn-primary">Guardar</button>
         </form>
     </div>
 </div>
