--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Shared/_LoginPartial.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 @if (User.Identity.IsAuthenticated)
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hola @User.Identity.Name!</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
