--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Delete.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Delete.cshtml
@@ -14,19 +14,19 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NombreZona)
+           Nombre de Zona
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NombreZona)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DescripcionZona)
+           Descripcion
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DescripcionZona)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.GeometriaZona)
+           Geometria
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.GeometriaZona)
@@ -36,6 +36,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdZona" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
