--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Details.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Details.cshtml
@@ -4,26 +4,26 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
     <h4>Zona</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NombreZona)
+           Nombre de Zona
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NombreZona)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DescripcionZona)
+           Descripcion
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DescripcionZona)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GeometriaZona)
+            Geometria
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.GeometriaZona)
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.IdZona">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+   
+    <a asp-action="Index">Volver a la lista</a>
 </div>
