--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
@@ -57,9 +57,9 @@
                     @Html.DisplayFor(modelItem => item.GeometriaZona)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.IdZona">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.IdZona">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.IdZona">Delete</a>
+                   
+                    <a asp-action="Details" asp-route-id="@item.IdZona">Detalles</a> |
+                    <a asp-action="Delete" asp-route-id="@item.IdZona">Eliminar</a>
                 </td>
             </tr>
         }
@@ -71,7 +71,7 @@
     var layerSource = new ol.source.ImageWMS({
         url: 'http://localhost:8080/geoserver/wms',
         params: {
-            'LAYERS': 'view_peticion'
+            'LAYERS': 'view_zona'
         },
         ratio: 1,
         serverType: 'geoserver',
