--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Delete.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Delete.cshtml
@@ -6,12 +6,12 @@
 
 <h1>Eliminar</h1>
 
-<h3>¿Estás seguro de que quieres eliminar esto? </h3>
+<h3>¿Estas seguro de que quieres eliminar esto? </h3>
 <div>
     <h4>Operadores de Zona</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">Operadores</dt>
+        <dt class="col-sm-2">Operador</dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.OperadorNavigation.Apellido)
         </dd>
