--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Index.cshtml
@@ -28,9 +28,9 @@
                     @Html.DisplayFor(modelItem => item.ZonaNavigation.NombreZona)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    
+                    <a asp-action="Details" asp-route-id="@item.Operador">Detalles</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Operador">Eliminar</a>
                 </td>
             </tr>
         }
