Visualizacion de zonas y peticiones como debe ser

--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
@@ -18,7 +18,18 @@
     <div class="text-center" id="info">&nbsp;</div>
 </div>
 
+@foreach (var c in User.Claims)
+{
+    if (c.Type == System.Security.Claims.ClaimTypes.NameIdentifier)
+    {
+        <div id="idUser">@c.Value</div>
+    }
 
+    if (c.Type == System.Security.Claims.ClaimTypes.Role)
+    {
+        <div id="rolUser">@c.Value</div>
+    }
+}
 <script src="~/js/site.js"></script>
 <style>
     .card {
