--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Peticions/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Peticions/Create.cshtml
@@ -39,7 +39,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="Usuario" class="control-label"></label>
-                <select asp-for="Usuario" class="form-control" asp-items="ViewBag.Usuario"></select>
+                @{
+                    @foreach (var c in User.Claims)
+                    {
+                        if (c.Type == System.Security.Claims.ClaimTypes.NameIdentifier)
+                        {
+                            <input asp-for="Usuario" id="usuario" class="form-control" value="@c.Value"/>
+                        }
+                    }
+                }
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
