Se ven las zonas
Co-Authored-By: Andrea Mendez Sanz <4939+a814974@users.noreply.github.gsissc.myatos.net>
Co-Authored-By: Raul Barquero Consuegra <4938+a814967@users.noreply.github.gsissc.myatos.net>

--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
@@ -70,9 +70,9 @@
 <script type="text/javascript">
     // source
     var layerSource = new ol.source.ImageWMS({
-        url: 'http://localhost:8080/geoserver/wms&viewparams=idUsuario:1',
+        url: 'http://localhost:8080/geoserver/wms',
         params: {
-            'LAYERS': 'pruebas'
+            'LAYERS': 'view_zona'
         },
         ratio: 1,
         serverType: 'geoserver',
